--- a/Conference-Website/allHTML/about.html
+++ b/Conference-Website/allHTML/about.html
@@ -1,86 +1,114 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About - InnovateX 2025</title>
-    <link rel="stylesheet" href="./assets/css/about.css" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-  </head>
-  <body>
-    <!-- Navbar -->
-    <nav class="navbar">
-      <div class="nav-left">InnovateX</div>
-      <div class="nav-right">
-        <ul class="nav-links">
-          <li><a href="/">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li><a href="schedule.html">Schedule</a></li>
-          <li><a href="speakers.html">Speakers</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <button class="toggle-btn" onclick="toggleMenu()">☰</button>
-      </div>
-    </nav>
+/* Dark Mode Theme */
+body {
+  background-color: #121212;
+  color: #ffffff;
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-    <!-- Overlay -->
-    <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
+/* Speakers Section */
+.speakers-section {
+  max-width: 1200px;
+  margin: 50px auto;
+  text-align: center;
+  padding: 20px;
+}
 
-    <!-- Mobile Menu -->
-    <div class="mobile-menu" id="mobileMenu">
-      <button class="close-btn" onclick="toggleMenu()">×</button>
-      <ul class="mobile-links">
-        <li><a href="/">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="schedule.html">Schedule</a></li>
-        <li><a href="speakers.html">Speakers</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
+.section-title {
+  font-size: 40px;
+  color: #00e5ff; /* Vibrant cyan for title */
+  margin-bottom: 25px;
+  text-transform: capitalize;
+  font-family: 'Arial', sans-serif;
+  letter-spacing: 2px;
+  margin-top: 0px;
+}
 
-    <section class="about-section">
-      <div class="container">
-        <h1 class="section-title">About InnovateX 2025</h1>
-        <p class="about-description">
-          Welcome to InnovateX 2025, the premier technology conference that
-          brings together visionaries, industry leaders, and innovators to shape
-          the future. Our mission is to create a platform where ideas converge,
-          cutting-edge technology is unveiled, and connections are forged to
-          drive the next era of innovation.
-        </p>
-        <div class="about-grid">
-          <div class="about-card">
-            <h2>Our Mission</h2>
-            <p>
-              Empowering creative minds by fostering collaboration and
-              showcasing breakthrough technologies that redefine industries.
-            </p>
-          </div>
-          <div class="about-card">
-            <h2>Why Attend?</h2>
-            <p>
-              Experience world-class keynotes, hands-on workshops, and
-              networking opportunities with top tech pioneers and investors.
-            </p>
-          </div>
-          <div class="about-card">
-            <h2>Event Highlights</h2>
-            <ul>
-              <li>AI & Machine Learning Innovations</li>
-              <li>Blockchain & Web3 Technologies</li>
-              <li>Future of Software Development</li>
-              <li>Networking & Startup Pitch Sessions</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
+/* Speakers Grid */
+.speakers-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  justify-content: center;
+}
 
-    <script>
-      function toggleMenu() {
-        document.querySelector(".mobile-menu").classList.toggle("show");
-        document.querySelector(".overlay").classList.toggle("show");
-      }
-    </script>
-  </body>
-</html>
+/* Speaker Card */
+.speaker-card {
+  background: #1e1e1e;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 15px rgba(0, 255, 255, 0.3);
+  text-align: center;
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, filter 0.3s ease-in-out;
+}
+
+/* Hover Effect */
+.speakers-grid:hover .speaker-card {
+  opacity: 0.5; /* Reduce opacity of all cards */
+  filter: blur(2px); /* Add blur effect to all cards */
+}
+
+.speakers-grid .speaker-card:hover {
+  opacity: 1; /* Restore opacity for the hovered card */
+  filter: blur(0); /* Remove blur effect for the hovered card */
+  transform: scale(1.05); /* Scale up the hovered card */
+}
+
+/* Speaker Image */
+.speaker-img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+/* Speaker Info */
+.speaker-info {
+  padding: 15px;
+}
+
+.speaker-name {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #00e5ff;
+}
+
+.conference-name {
+  font-size: 1.2rem;
+  color: #ccc;
+  margin: 5px 0;
+  font-weight: bold;
+}
+
+.event-details {
+  font-size: 1rem;
+  color: #bbb;
+  line-height: 1.5;
+  margin: 10px 0;
+}
+
+/* Know More Button */
+.know-more {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 10px 15px;
+  background: #0078ff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.know-more:hover {
+  background: #00e5ff;
+  color: #121212;
+}
+
+/* Responsive Design */
+@media screen and (max-width: 768px) {
+  .speakers-grid {
+    grid-template-columns: 1fr;
+  }
+}
