--- a/Conference-Website/allHTML/contact.html
+++ b/Conference-Website/allHTML/contact.html
@@ -10,10 +10,10 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <div class="nav-left">InnovateX</div>
+      <div class="nav-left"><i></i></div>
       <div class="nav-right">
         <ul class="nav-links">
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="speakers.html">Speakers</a></li>
@@ -30,7 +30,7 @@
     <div class="mobile-menu" id="mobileMenu">
       <button class="close-btn" onclick="toggleMenu()">×</button>
       <ul class="mobile-links">
-        <li><a href="/">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="schedule.html">Schedule</a></li>
         <li><a href="speakers.html">Speakers</a></li>
@@ -40,9 +40,9 @@
 
     <!-- Contact Section -->
     <section class="contact-section">
-      <h1 class="section-title">Get In Touch</h1>
+      <h1 class="section-title">Let's Talk</h1>
       <p class="contact-subtitle">
-        We’d love to hear from you! Fill in the form below.
+        We’d love to hear from you! Reach out by filling in the form below.
       </p>
 
       <form id="contactForm">
@@ -63,8 +63,16 @@
 
         <button type="submit" class="submit-btn">Send Message</button>
         <p id="formStatus"></p>
+
       </form>
     </section>
+    
+    <center>
+    <img id="image" src="../InnovateX/images/ig.jpeg" alt="Instagram logo here">InnovateX_2025
+    <img id="image" src="../InnovateX/images/yt.jpeg" alt="Youtube logo here">InnovateX_yt_2025
+    <img id="image" src="../InnovateX/images/fb.jpeg" alt="Facebook logo here">InnovateX_fb_25
+    <p>Copywrite@InnovateX_2025</p>
+  </center>
 
     <script>
       function toggleMenu() {
