--- a/Conference-Website/allHTML/schedule.html
+++ b/Conference-Website/allHTML/schedule.html
@@ -10,13 +10,13 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <div class="nav-left">InnovateX</div>
+      <div class="nav-left"><i></i></div>
       <div class="nav-right">
         <ul class="nav-links">
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="schedule.html" class="active">Schedule</a></li>
           <li><a href="speakers.html">Speakers</a></li>
+          <li><a href="schedule.html" class="active">Schedule</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <button class="toggle-btn" onclick="toggleMenu()">☰</button>
@@ -30,10 +30,10 @@
     <div class="mobile-menu" id="mobileMenu">
       <button class="close-btn" onclick="toggleMenu()">×</button>
       <ul class="mobile-links">
-        <li><a href="/">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="schedule.html" class="active">Schedule</a></li>
         <li><a href="speakers.html">Speakers</a></li>
+        <li><a href="schedule.html" class="active">Schedule</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
@@ -44,10 +44,10 @@
       <div class="timeline">
         <div class="timeline-event">
           <div class="timeline-content">
-            <h2 class="event-title">AI & Machine Learning Summit</h2>
-            <h3 class="event-date">March 10, 2025</h3>
+            <h2 class="event-title">Web & App Development</h2>
+            <h3 class="event-date">February 24, 2025</h3>
             <p class="event-description">
-              Discover the latest trends in artificial intelligence and how they
+              Discover the latest trends in web development and how they
               are shaping the future of industries worldwide.
             </p>
             <a href="#" class="know-more">Know More</a>
@@ -56,11 +56,11 @@
 
         <div class="timeline-event">
           <div class="timeline-content">
-            <h2 class="event-title">Blockchain & Web3 Innovations</h2>
-            <h3 class="event-date">March 11, 2025</h3>
+            <h2 class="event-title">Machine Learning</h2>
+            <h3 class="event-date">February 24, 2025</h3>
             <p class="event-description">
               A deep dive into decentralized applications, smart contracts, and
-              the future of blockchain in various industries.
+              the future of robotics in various industries.
             </p>
             <a href="#" class="know-more">Know More</a>
           </div>
@@ -68,11 +68,11 @@
 
         <div class="timeline-event">
           <div class="timeline-content">
-            <h2 class="event-title">Cybersecurity & Data Privacy</h2>
-            <h3 class="event-date">March 12, 2025</h3>
+            <h2 class="event-title">Blockchain Technologies</h2>
+            <h3 class="event-date">February 24, 2025</h3>
             <p class="event-description">
-              Experts discuss the latest advancements in cybersecurity and how
-              to safeguard digital assets in an evolving cyber landscape.
+              Experts discuss the latest advancements in Blockchain and how
+              to safeguard digital assets in an evolving blockchain landscape.
             </p>
             <a href="#" class="know-more">Know More</a>
           </div>
@@ -80,17 +80,30 @@
 
         <div class="timeline-event">
           <div class="timeline-content">
-            <h2 class="event-title">Startup & Investor Networking</h2>
-            <h3 class="event-date">March 13, 2025</h3>
+            <h2 class="event-title">AI Technologies</h2>
+            <h3 class="event-date">February 25, 2025</h3>
             <p class="event-description">
-              Connect with investors, entrepreneurs, and innovators to build
-              strong collaborations and take startups to the next level.
+              Discover the latest trends in artificial intelligence and how they
+              are shaping the future of tech industries worldwide.
             </p>
             <a href="#" class="know-more">Know More</a>
           </div>
         </div>
       </div>
-    </section>
+
+    <div class="timeline-event">
+      <div class="timeline-content">
+        <h2 class="event-title">Future of Software Development</h2>
+        <h3 class="event-date">february 25, 2025</h3>
+        <p class="event-description">
+          A deep dive into software development, building applications,
+          and the future of wed animations.
+        </p>
+        <a href="#" class="know-more">Know More</a>
+      </div>
+    </div>
+  </div>
+</section>
 
     <script>
       function toggleMenu() {
