--- a/Conference-Website/allHTML/speakers.html
+++ b/Conference-Website/allHTML/speakers.html
@@ -10,13 +10,13 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <div class="nav-left">InnovateX</div>
+      <div class="nav-left"><i></i></div>
       <div class="nav-right">
         <ul class="nav-links">
           <li><a href="/">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="schedule.html">Schedule</a></li>
           <li><a href="speakers.html" class="active">Speakers</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <button class="toggle-btn" onclick="toggleMenu()">☰</button>
@@ -32,27 +32,22 @@
       <ul class="mobile-links">
         <li><a href="/">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="schedule.html">Schedule</a></li>
         <li><a href="speakers.html" class="active">Speakers</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
 
     <!-- Speakers Section -->
     <section class="speakers-section">
-      <h1 class="section-title">Meet Our Speakers</h1>
+      <h1 class="section-title">Speakers List</h1>
       <div class="speakers-grid">
         <div class="speaker-card">
-          <img
-            src="https://img.freepik.com/free-photo/handsome-business-guy-with-folder_23-2147580193.jpg?uid=R122914273&ga=GA1.1.102963658.1710051375&semt=ais_hybrid"
-            alt="Speaker 1"
-            class="speaker-img"
-          />
           <div class="speaker-info">
-            <h2 class="speaker-name">Dr. John Doe</h2>
-            <p class="conference-name">AI & Machine Learning Summit</p>
+            <h2 class="speaker-name">Gurudeep Singh</h2>
+            <p class="conference-name">Web & App Development</p>
             <p class="event-details">
-              📅 March 10, 2025 | 🏢 Grand Hall, NYC <br />
+              📅 February 24, 2025 | 🏢 Grand Hall, NYC <br />
               👨‍💼 Data Scientist | 15+ Years Experience
             </p>
             <a href="#" class="know-more">Know More</a>
@@ -60,16 +55,11 @@
         </div>
 
         <div class="speaker-card">
-          <img
-            src="https://img.freepik.com/free-photo/portrait-woman-holding-clip-board-hands-writing-paper-wearing-glasses-isolated-grey-wall_231208-209.jpg?uid=R122914273&ga=GA1.1.102963658.1710051375&semt=ais_hybrid"
-            alt="Speaker 2"
-            class="speaker-img"
-          />
           <div class="speaker-info">
-            <h2 class="speaker-name">Sarah Williams</h2>
-            <p class="conference-name">Blockchain & Web3 Innovations</p>
+            <h2 class="speaker-name">Keerthana Pandian</h2>
+            <p class="conference-name">Machine Learning</p>
             <p class="event-details">
-              📅 March 11, 2025 | 🏢 Hilton Conference Center <br />
+              📅 February 24, 2025 | 🏢 Hilton Conference Center <br />
               👩‍💻 Blockchain Developer | 10+ Years Experience
             </p>
             <a href="#" class="know-more">Know More</a>
@@ -77,22 +67,41 @@
         </div>
 
         <div class="speaker-card">
-          <img
-            src="https://img.freepik.com/free-photo/happy-businesswoman-holding-folder_74855-5075.jpg?uid=R122914273&ga=GA1.1.102963658.1710051375&semt=ais_hybrid"
-            alt="Speaker 3"
-            class="speaker-img"
-          />
           <div class="speaker-info">
-            <h2 class="speaker-name">Michael Brown</h2>
-            <p class="conference-name">Cybersecurity & Data Privacy</p>
+            <h2 class="speaker-name">Andrew Scorces</h2>
+            <p class="conference-name">Blockchain Technologies</p>
             <p class="event-details">
-              📅 March 12, 2025 | 🏢 Tech Park Auditorium <br />
+              📅 February 24, 2025 | 🏢 Tech Park Auditorium <br />
               🔐 Cybersecurity Analyst | 12+ Years Experience
             </p>
             <a href="#" class="know-more">Know More</a>
           </div>
         </div>
+
+      <div class="speaker-card">
+        <div class="speaker-info">
+          <h2 class="speaker-name">Jack Paul</h2>
+          <p class="conference-name">Software Development</p>
+          <p class="event-details">
+            📅 February 25, 2025 | 🏢 Hill Town Conference Hall<br />
+            🔐 Software Developer | 19+ Years Experience
+          </p>
+          <a href="#" class="know-more">Know More</a>
+        </div>
       </div>
+
+    <div class="speaker-card">
+      <div class="speaker-info">
+        <h2 class="speaker-name">Lisa Cramling</h2>
+        <p class="conference-name">AI Technologies</p>
+        <p class="event-details">
+          📅 February 25, 2025 | 🏢 Tech Beast Auditorium <br />
+          🔐 AI Developer | 10+ Years Experience
+        </p>
+        <a href="#" class="know-more">Know More</a>
+      </div>
+    </div>
+  </div>
     </section>
 
     <script>
